--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
+matplotlib==3.6.1
+nltk==3.7
+numpy==1.23.3
+pandas==1.5.0
+plotly==5.10.0
+requests==2.28.1
+scikit-learn==1.1.2
+scipy==1.9.2
+seaborn==0.12.0
+sklearn==0.0
 streamlit==1.13.0
 
-
-nbformat==5.7.0
